--- a/frontend/src/assets/components/chatbot/index.css
+++ b/frontend/src/assets/components/chatbot/index.css
@@ -54,6 +54,7 @@
 .chat-logo{
   width: 60px;
   height: 60px;
+  border-radius: 50%;
 }
 
 .infinity-button:hover {
